fix(header): bg image wasn't taking full width on smaller sizes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2694,12 +2694,12 @@ input[type='button']:disabled,
   -webkit-justify-content: space-between;
   -ms-justify-content: space-between;
   justify-content: space-between;
-  background-color: #1f1815;
+  background-color: #2e3440;
   background-attachment: scroll, scroll;
-  background-image: url('images/overlay.png'), url('../../images/bg2.jpg');
+  background-image: url('../../images/bg-h.jpg');
   background-position: top left, top left;
-  background-repeat: repeat, no-repeat;
-  background-size: auto, 150%;
+  /* background-repeat: repeat; */
+  background-size: cover;
   color: rgba(255, 255, 255, 0.7);
   height: 100%;
   left: 0;
@@ -3165,8 +3165,10 @@ body.is-touch .poptrox-popup .closer {
 
   #header {
     background-attachment: scroll;
+    background-image: url('../../images/bg-h.jpg');
+    background-repeat: no-repeat;
     background-position: top left, center center;
-    background-size: auto, cover;
+    background-size: cover;
     left: auto;
     padding: 6em 4em;
     position: relative;
@@ -3189,10 +3191,10 @@ body.is-touch .poptrox-popup .closer {
   #footer {
     background-attachment: scroll;
     background-color: #1f1815;
-    background-image: url('images/overlay.png'), url('../../images/bg.jpg');
+    background-image: url('../../images/bg-h.jpg');
     background-position: top left, bottom center;
-    background-repeat: repeat, no-repeat;
-    background-size: auto, cover;
+    background-repeat: no-repeat;
+    background-size: cover;
     bottom: auto;
     left: auto;
     padding: 4em 4em 6em 4em;
